--- a/modules/swagger-codegen/src/main/resources/Java/pojo.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/pojo.mustache
@@ -184,6 +184,15 @@ public class {{classname}} {{#parent}}extends {{{parent}}} {{/parent}}{{#parcela
     {{/vars}}sb.append("}");
     return sb.toString();
   }
+  
+  public String toJSON() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("{ ");
+    {{#parent}}sb.append("\"parent\":\"").append({{parent}}.toString()).append("\"").append(", ");{{/parent}}
+    {{#vars}}sb.append("\"{{name}}\":\"").append(toIndentedString({{name}})).append("\"").append(", ");
+    {{/vars}}sb.append("\"end\":\"end\"}");
+    return sb.toString();
+  }
 
   /**
    * Convert the given object to string with each line indented by 4 spaces
