--- a/modules/swagger-codegen/src/main/resources/Java/component.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/component.mustache
@@ -27,7 +27,7 @@
 </contacts>
 <description>
  * Function: {{notes}}
- * API: {{invokerPackage}}.action.{{operationIdCamelCase}}
+ * API: {{invokerPackage}}.action.{{operationIdCamelCase}}Action
  * Input parameters:
 {{#allParams}}		"{{paramName}}": {{{dataType}}}{{#required}}, required{{/required}}. {{description}}
 {{/allParams}}
