Keep the GUID for return parameters

--- a/modules/swagger-codegen/src/main/resources/Java/component.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/component.mustache
@@ -14,10 +14,10 @@
 <return-value id="{{dictOk}}" std-code="ok" user-code="3" user-code-alias="" user-code-type="constant">
 <brief>HTTP request and response successfully;</brief>
 </return-value>
-<return-value id="{{dictAbort}}" std-code="fail" user-code="" user-code-alias="" user-code-type="none">
+<return-value id="{{dictFail}}" std-code="fail" user-code="" user-code-alias="" user-code-type="none">
 <brief>Request sent or received meeting error;</brief>
 </return-value>
-<return-value id="{{dictFail}}" std-code="abort" user-code="" user-code-alias="" user-code-type="none">
+<return-value id="{{dictAbort}}" std-code="abort" user-code="" user-code-alias="" user-code-type="none">
 <brief>User's input parameters have something wrong</brief>
 </return-value>
 </return-values>
